<resources>
    <string name="app_name">WMTStore</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="title_fav">Favourites</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>